--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_PUBLICKEY='FLWPUBK-1c46a86a8acd1b72feee728436447289-X'
+REACT_APP_PUBLICKEY='FLWPUBK-e0ff1336baf32ef5198a88506a9b7537-X'
+# FLWPUBK-1c46a86a8acd1b72feee728436447289-X
