--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-REACT_APP_PUBLICKEY='FLWPUBK-e0ff1336baf32ef5198a88506a9b7537-X'
+REACT_APP_PUBLICKEY='FLWPUBK-efe729082a6c65a9e0b0da190d7b4434-X'
 # FLWPUBK-1c46a86a8acd1b72feee728436447289-X
+# FLWPUBK-e0ff1336baf32ef5198a88506a9b7537-X
